...

/// The translations for English (`en`).
class AppLocalizationsEn extends AppLocalizations {
  AppLocalizationsEn([String locale = 'en']) : super(locale);

  @override
  String get appTitle => 'Breakdex';

  @override
  String emptyLibraryTitle(String itemPlural) {
    return 'No $itemPlural yet';
  }

...
  String get navReview => 'Review';

  @override
  String get navStats => 'Stats';

  @override
  String get navSettings => 'Settings';

  @override
  String get addSectionCreate => 'Create';

  @override
  String get addContentTitle => 'Add Content';
...
